tests-system/rbt-markup-string-resolution/output
a = "[[Foo.Bar]]"
       ^^^ rbt-markup-string-resolution/potato.trlc:4: error: package must be imported before use
Processed 2 models, 0 checks and 2 requirement files and found 1 error
